--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "build": "NODE_ENV=production tsc -p tsconfig.json",
     "lint": "eslint --ext .js,.ts .",
     "prettier:format": "prettier --write \"./**/*.ts\"",
-    "prettier:check": "prettier --check \"./**/*.ts\""
+    "prettier:check": "prettier --check \"./**/*.ts\"",
+    "db:seed": "npx prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "author": "Adrian Escat - @adrianescat (github)",
   "license": "UNLICENSED",
@@ -29,11 +33,14 @@
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "prisma": "^4.13.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "pg": "^8.10.0",
+    "@prisma/client": "^4.13.0",
     "dotenv-safe": "^8.2.0",
-    "fastify": "^4.17.0"
+    "fastify": "^4.17.0",
+    "pg": "^8.10.0"
   }
 }
